k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sarvavaidya
  labels:
    name: sarvavaidya
    app.kubernetes.io/part-of: sarvavaidya-ehr
